--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/gutwenger/gutwenger.github.io.git",
+  "homepage": "https://gutwenger.github.io/gutwenger/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
